# cangjie-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  SKILL.md  main.py  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  npm-release.yml  python-release.yml  release-prebuilt.yml  release.yml  rust-release.yml
cangjie-cli/: Cargo.toml
cangjie-cli/src/: config.rs  main.rs
cangjie-cli/src/cli/: commands.rs  mod.rs
cangjie-cli/src/client/: mod.rs
cangjie-cli/src/daemon/: ipc.rs  mod.rs  server.rs
cangjie-core/: Cargo.toml
cangjie-core/src/: config.rs  error.rs  lib.rs  logging.rs  prompts.rs  types.rs
cangjie-core/src/config/: constants.rs  enums.rs  index_info.rs  settings.rs
cangjie-core/src/prompts/: docs.txt  lsp.txt
cangjie-indexer/: Cargo.toml
cangjie-indexer/src/: api_client.rs  initializer.rs  lib.rs  repo.rs  testutil.rs
cangjie-indexer/src/document/: chunker.rs  loader.rs  mod.rs  source.rs  summarizer.rs
cangjie-indexer/src/embedding/: local.rs  mod.rs  openai.rs
cangjie-indexer/src/initializer/: build.rs  prebuilt.rs
cangjie-indexer/src/rerank/: local.rs  mod.rs  noop.rs  openai.rs
cangjie-indexer/src/search/: bm25.rs  fusion.rs  local.rs  mod.rs  remote.rs  synonyms.rs  vector.rs
cangjie-lsp/: Cargo.toml
cangjie-lsp/src/: client.rs  config.rs  dependency.rs  lib.rs  tools.rs  transport.rs  types.rs  utils.rs
cangjie-lsp/src/client/: capabilities.rs  command.rs
cangjie-lsp/src/dependency/: resolver.rs  tests.rs  types.rs
cangjie-lsp/src/tools/: convert.rs  process.rs  types.rs
cangjie-lsp/src/utils/: cjpm.rs  path.rs
cangjie-mcp/: Cargo.toml
cangjie-mcp-cli/: Cargo.toml
cangjie-mcp-cli/src/: config.rs  lib.rs  main.rs
cangjie-mcp-cli/src/cli/: commands.rs  mod.rs  output.rs
cangjie-mcp-cli/src/client/: mod.rs
cangjie-mcp-cli/src/daemon/: ipc.rs  mod.rs  paths.rs  server.rs
cangjie-mcp-server/: Cargo.toml
cangjie-mcp-server/src/: main.rs
cangjie-mcp-test/: Cargo.toml
cangjie-mcp-test/src/: lib.rs
cangjie-mcp-test/tests/: test_bm25_pipeline.rs  test_document_pipeline.rs  test_full_pipeline.rs  test_git_document_source.rs  test_git_repo.rs  test_http_server.rs  test_lsp_envsetup.rs  test_lsp_real_project.rs  test_mcp_tools.rs  test_openai_embedding.rs  test_real_use_cases.rs  test_search_fusion.rs  test_vector_store.rs
cangjie-mcp/src/: lib.rs
cangjie-mcp/src/api/: client.rs
cangjie-mcp/src/config/: mod.rs
cangjie-mcp/src/indexer/: api_client.rs  api_types.rs  initializer.rs  mod.rs
cangjie-mcp/src/indexer/document/: chunker.rs  loader.rs  mod.rs  source.rs  summarizer.rs
cangjie-mcp/src/indexer/embedding/: local.rs  mod.rs  openai.rs
cangjie-mcp/src/indexer/rerank/: local.rs  mod.rs  noop.rs  openai.rs
cangjie-mcp/src/indexer/search/: bm25.rs  fusion.rs  mod.rs  sqlite_vec_ext.rs  synonyms.rs  vector.rs
cangjie-mcp/src/lsp/: client.rs  config.rs  dependency.rs  mod.rs  tools.rs  transport.rs  types.rs  utils.rs
cangjie-mcp/src/prompts/: mod.rs
cangjie-mcp/src/repo/: mod.rs
cangjie-mcp/src/server/: http.rs  lsp_tools.rs  mod.rs  tools.rs
cangjie-server/: Cargo.toml
cangjie-server/src/: http.rs  lib.rs  lsp_pool.rs  lsp_tools.rs  mcp_handler.rs  sse.rs  streamable.rs
cangjie-server/src/lsp_tools/: resolve.rs  response.rs  types.rs
cangjie-server/src/mcp_handler/: ranking.rs  results.rs
npm/: package.json
npm/scripts/: stage-binary-package.cjs  stage-source-package.cjs
npm/tests/: runtime.test.cjs
python/cangjie_mcp/: __init__.py  __main__.py  _find_cangjie_mcp.py
scripts/: build_index.py  bump_version.py  docker_build.py  docker_publish.py  docker_run.py  entrypoint.sh
src/: lib.rs  main.rs
src/cangjie_mcp/: __init__.py  cli.py  cli_args.py  config.py  context.py  defaults.py  factory.py  utils.py
src/cangjie_mcp/indexer/: api_extractor.py  bm25_store.py  chunker.py  document_source.py  embeddings.py  fusion.py  initializer.py  loader.py  multi_store.py  reranker.py  search_index.py  store.py
src/cangjie_mcp/lsp/: __init__.py  cli.py  client.py  config.py  dependency.py  tools.py  types.py  utils.py
src/cangjie_mcp/prebuilt/: manager.py
src/cangjie_mcp/prompts/: __init__.py
src/cangjie_mcp/repo/: git_manager.py
src/cangjie_mcp/server/: app.py  combined_app.py  factory.py  http.py  lsp_app.py  tools.py
src/config/: mod.rs
src/indexer/: mod.rs
src/indexer/document/: chunker.rs
src/indexer/embedding/: local.rs
src/indexer/rerank/: openai.rs
src/indexer/search/: mod.rs
src/lsp/: config.rs  dependency.rs  tools.rs  utils.rs
tests/: conftest.py  constants.py  test_config.py  test_manager.py  test_store.py
tests/eval/: evaluate.py  metrics.py
tests/integration/: conftest.py  test_e2e_workflow.py  test_embedding_integration.py  test_http_server_integration.py  test_mcp_protocol_integration.py  test_mcp_server_integration.py  test_prebuilt_integration.py  test_reranker_integration.py  test_store_integration.py  test_tools_integration.py
tests/unit/: test_api_extractor.py  test_bm25_store.py  test_chunker.py  test_cli.py  test_config.py  test_embeddings.py  test_fusion.py  test_git_manager.py  test_http_server.py  test_lsp_config.py  test_lsp_utils.py  test_manager.py  test_reranker.py  test_search_index.py  test_tool_schemas.py  test_tools.py
