[package]
name = "cangjie-core"
version = "0.3.6"
edition = "2021"
description = "Core types, configuration, and utilities for Cangjie MCP"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1"
once_cell = "1"
