[package]
name = "cangjie-indexer"
version = "0.4.5"
edition = "2021"
description = "Search engine, document processing, and embedding for Cangjie MCP"
license = "MIT"

[features]
default = []
local = [
    "dep:fastembed",
    "fastembed/ort-download-binaries-rustls-tls",
]
legacy = [
    "local",
    "dep:ort",
    "dep:ort-tract",
    "ort/alternative-backend",
]
local-cuda = ["local", "fastembed/cuda"]
local-cudnn = ["local", "fastembed/cudnn"]
local-metal = ["local", "fastembed/metal"]
local-mkl = ["local", "fastembed/mkl"]
local-accelerate = ["local", "fastembed/accelerate"]

[dependencies]
cangjie-core = { path = "../cangjie-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
tantivy = "0.26"
jieba-rs = "0.10"
gix = { version = "0.84", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "revision",
    "index",
    "parallel",
    "sha1",
] }
tracing = "0.1"
async-trait = "0.1"
regex = "1"
anyhow = "1"
strsim = "0.11"
lru = "0.18"
text-splitter = { version = "0.31", features = ["markdown", "code"] }
tree-sitter-cangjie = { git = "https://gitcode.com/Cangjie-SIG/tree-sitter-cangjie.git" }
# rusqlite 0.40 pulls libsqlite3-sys 0.38.1, whose build.rs uses the unstable
# `cfg_select!` macro (needs Rust > 1.93); 0.39 is the latest that builds on
# the current stable toolchain.
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1.9"
zerocopy = { version = "0.8", features = ["derive"] }
once_cell = "1"
backon = "1.6"

fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models"] }
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray"] }
ort-tract = { version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
