[package]
name = "cangjie-lsp"
version = "0.3.3"
edition = "2021"
description = "LSP client for Cangjie programming language"
license = "MIT"

[dependencies]
cangjie-core = { path = "../cangjie-core" }
lsp-types = "0.97"
jsonrpsee = { version = "0.26", features = ["async-client"] }
shlex = "1"
toml = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
once_cell = "1"
regex = "1"
anyhow = "1"
async-trait = "0.1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
