[package]
name = "cangjie-mcp-cli"
version = "0.3.0"
edition = "2021"
description = "MCP stdio server CLI for Cangjie programming language"
license = "MIT"

[[bin]]
name = "cangjie-mcp"
path = "src/main.rs"

[features]
default = []
local = ["cangjie-mcp/local"]
legacy = ["cangjie-mcp/legacy"]
local-cuda = ["cangjie-mcp/local-cuda"]
local-cudnn = ["cangjie-mcp/local-cudnn"]
local-metal = ["cangjie-mcp/local-metal"]
local-mkl = ["cangjie-mcp/local-mkl"]
local-accelerate = ["cangjie-mcp/local-accelerate"]

[dependencies]
cangjie-mcp = { path = "../cangjie-mcp" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rmcp = { version = "0.16", features = ["server", "transport-io"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
