[package]
name = "cangjie-mcp-server"
version = "0.3.0"
edition = "2021"
description = "HTTP query server for Cangjie programming language documentation"
license = "MIT"

[[bin]]
name = "cangjie-mcp-server"
path = "src/main.rs"

[features]
default = []
local = ["cangjie-mcp/local"]

[dependencies]
cangjie-mcp = { path = "../cangjie-mcp" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
