[package]
name = "cangjie-mcp-server"
version = "0.3.9"
edition = "2021"
description = "HTTP query server for Cangjie programming language documentation"
license = "MIT"

[[bin]]
name = "cangjie-mcp-server"
path = "src/main.rs"

[features]
default = []
local = ["cangjie-server/local"]
legacy = ["cangjie-server/legacy"]
local-cuda = ["cangjie-server/local-cuda"]
local-cudnn = ["cangjie-server/local-cudnn"]
local-metal = ["cangjie-server/local-metal"]
local-mkl = ["cangjie-server/local-mkl"]
local-accelerate = ["cangjie-server/local-accelerate"]

[dependencies]
cangjie-core = { path = "../cangjie-core" }
cangjie-server = { path = "../cangjie-server", features = ["http", "streamable-http"] }
cangjie-indexer = { path = "../cangjie-indexer" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
axum = { version = "0.8", features = ["http2"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
