[package]
name = "cangjie-mcp-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cangjie-core = { path = "../cangjie-core" }
cangjie-indexer = { path = "../cangjie-indexer" }
cangjie-server = { path = "../cangjie-server" }
cangjie-lsp = { path = "../cangjie-lsp" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
serde_json = "1"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
anyhow = "1"
async-trait = "0.1"
rmcp = { version = "1.2", features = ["server", "macros", "schemars"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
