[package]
name = "cangjie-mcp"
version = "0.3.0"
edition = "2021"
description = "Core library for Cangjie programming language MCP server"
license = "MIT"

[features]
default = []
local = ["dep:fastembed"]

[dependencies]
# MCP protocol
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }

# CLI (ValueEnum derive for config enums)
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client + server
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# BM25 search
tantivy = "0.25"

# Chinese tokenization
jieba-rs = "0.8"

# Git operations
gix = { version = "0.80", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "revision",
    "index",
    "parallel",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Async trait support
async-trait = "0.1"

# Utilities
regex = "1"
dirs = "6"
anyhow = "1"
thiserror = "2"
once_cell = "1"
strsim = "0.11"
futures = "0.3"

# Markdown-aware chunking
text-splitter = { version = "0.29", features = ["markdown"] }

# Vector database
lancedb = "0.26"
arrow-array = "57"

# LSP support
toml = "1.0"
tokio-lsp = "0.1"
lsp-types = "0.97"

# Local embedding/reranking (optional)
fastembed = { version = "5", optional = true }

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
