[package]
name = "cangjie-mcp"
version = "0.3.0"
edition = "2021"
description = "Core library for Cangjie programming language MCP server"
license = "MIT"

[features]
default = []
local = [
    "dep:fastembed",
    "fastembed/ort-download-binaries-rustls-tls",
]
legacy = [
    "local",
    "dep:ort",
    "dep:ort-tract",
    "ort/alternative-backend",
]
local-cuda = ["local", "fastembed/cuda"]
local-cudnn = ["local", "fastembed/cudnn"]
local-metal = ["local", "fastembed/metal"]
local-mkl = ["local", "fastembed/mkl"]
local-accelerate = ["local", "fastembed/accelerate"]

[dependencies]
# MCP protocol
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }

# CLI (ValueEnum derive for config enums)
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-util", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client + server
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
axum = { version = "0.8", features = ["http2"] }
tower-http = { version = "0.6", features = ["cors"] }

# BM25 search
tantivy = "0.25"

# Chinese tokenization
jieba-rs = "0.8"

# Git operations
gix = { version = "0.80", default-features = false, features = [
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "revision",
    "index",
    "parallel",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Async trait support
async-trait = "0.1"

# Utilities
regex = "1"
dirs = "6"
anyhow = "1"
thiserror = "2"
once_cell = "1"
strsim = "0.11"
# Markdown-aware chunking
text-splitter = { version = "0.29", features = ["markdown"] }

# Vector database (SQLite + sqlite-vec)
rusqlite = { version = "0.38", features = ["bundled"] }
sqlite-vec = "0.1.7-alpha.10"
zerocopy = { version = "0.8", features = ["derive"] }

# LSP support
toml = "1.0"
tokio-lsp = "0.1"
lsp-types = "0.97"

# Local embedding/reranking (optional)
fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models"] }
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray"] }
ort-tract = { version = "0.2.0", optional = true }

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
